# cotwkit-tauri

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  main.rs
src/assets/: cotwkit.theme.json
src/common/: enums.js
src/components/ConfigProvider/: index.vue
src/components/Logo/: index.vue
src/components/SideBar/: index.vue
src/components/TitleBar/: index.vue
src/locales/: index.js
src/locales/lang/: en-US.js  zh-CN.js
src/plugins/: custom-func.js
src/router/: index.js
src/stores/: settings.js
src/styles/: styles.css  theme.css
src/views/Backup/: index.vue
src/views/Handbook/: index.vue
src/views/Home/: index.vue
src/views/Setting/: index.vue
