[package]
name = "cotwkit"
version = "0.0.1"
description = "A Tauri App"
authors = ["Triabin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cotwkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
chrono = "0.4.40"
tauri-plugin-fs = "2.2.0"
